# iced-code-editor

./: .cargo-ignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Cargo.toml.backup  README.md  TODO.md
.github/workflows/: rust.yml
demo-app/: Cargo.toml  README.md  demo_file.lua  index.html
demo-app/src/: app.rs  file_ops.rs  lsp_config.rs  lsp_process_client.rs  main.rs  types.rs  ui.rs
demo-app/src/app/: app_lsp.rs
demo-app/src/ui/: lsp.rs
docs/: DEV.md  PUBLISHING.md
iced-code-editor/: Cargo.toml
iced-code-editor/benches/: editor_benchmarks.rs
iced-code-editor/locales/: it.yml
iced-code-editor/src/: canvas_editor.rs  component.rs  custom_editor.rs  i18n.rs  lib.rs  state.rs  text_buffer.rs  text_utils.rs  theme.rs
iced-code-editor/src/canvas_editor/: canvas_impl.rs  clipboard.rs  command.rs  cursor.rs  cursor_set.rs  folding.rs  history.rs  ime_requester.rs  lsp.rs  mod.rs  search.rs  search_dialog.rs  selection.rs  update.rs  view.rs  wrapping.rs
iced-code-editor/src/canvas_editor/lsp_process/: mod.rs
src/: main.rs
src/code_editor/: component.rs  mod.rs  state.rs
